K8s/base/checkout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  labels:
    app: checkoutservice
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
    - name: tcp-service
      port: 8080
      targetPort: 8080
