K8s/base/checkout/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkoutservice
spec:
  podSelector:
    matchLabels:
      app: checkoutservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - port: 9092
    - to:
        - podSelector:
            matchLabels:
              app: cartservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: currencyservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: emailservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: paymentservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: productcatalogservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: quoteservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: shippingservice
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: flagd
      ports:
        - port: 8013
    - to:
        - podSelector:
            matchLabels:
              app: opentelemetry-demo-otelcol
      ports:
        - port: 4317
    - to:
        - namespaceSelector: {}
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
